--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <script src='app.js' defer></script>
+        
+        
     </head>
     <body>
         <div id='btnContainer'>
@@ -8,5 +9,7 @@
         </div>
         <div id='container'>
         </div>
+        <script src='grid-template.js'></script>
+        <script src='app.js'></script>
     </body>
 </html>
