Added some preminlary styling. Want to add desk background and buttons to change background

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
         
-        
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Etch-a-Sketch</h1>
+        <h3>Drag mouse over area below to draw!</h3>
         <div id='btnContainer'>
             <button id='btn' type='button'>Click Here to Reset</button>
         </div>
