Working app... need to see if can get buttons to change color of drawing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <h1>Etch-a-Sketch</h1>
         <h3>Drag mouse over area below to draw!</h3>
         <div id='btnContainer'>
-            <button id='btn' type='button'>Click Here to Reset</button>
+            <p id='textbutton'>Click a button to select a color: </p>
+            <button class ='btn' id='black' type='button'>Black</button>
+            <button class ='btn' id='blue' type='button'>Blue</button>
+            <button class ='btn' id='green' type='button'>Green</button>
+            <button class ='btn' id='rainbow' type='button'>Rainbow</button>
+            <button class ='btn' id='reset' type='button'>Reset</button>
         </div>
         <div id='container'>
         </div>
